package atlas.common;

option java_package = "org.atlasapi.serialization.protobuf";
option java_outer_classname = "CommonProtos";
option optimize_for = SPEED;

message DateTime {
    int64 millis = 1;
}

message LocaleString {
    string value = 1;
    string locale = 2;
}

message Identification {
    int64 id = 1;
    string source = 2 [deprecated=true];
    string type = 3 [deprecated=true];
    repeated Alias aliases = 4;
    repeated Reference equivs = 5;
    DateTime first_seen = 6 [deprecated=true];
    DateTime last_updated = 7;
    string uri = 9;
    string curie = 10;
    DateTime equivalenceUpdate = 11;
}

message BroadcastRef {
    string sourceId =1;
    Identification channelId = 2;
    DateTime transmission_time = 3;
    DateTime transmission_end_time = 4;
}

message LocationSummary {
    bool available =1;
    string uri =2;
    DateTime availability_start = 3;
    DateTime availability_end = 4;
}

message Reference {
    int64 id = 1;
    string source = 2;
    string type = 3;
    string sort = 4;
    DateTime updated = 5;
    int64 position = 6;
    repeated Certificate certificates = 7;
    int32 releaseYear = 8;
}

message Alias {
    string value = 1;
    string namespace = 2;
}

message Certificate {
    string country = 1;
    string classification = 2;
}

message Described {
    LocaleString title = 1;
    LocaleString shortDescription = 2;
    LocaleString mediumDescription = 3;
    LocaleString longDescription = 4;
    Synopses synopses = 5;
    LocaleString description = 6;
    string mediaType = 7;
    string specialization = 8;
    repeated string genre = 9;
    string source = 10;
    string image = 11;
    repeated Image images = 12;
    string thumbnail = 13;
    DateTime firstSeen = 14;
    DateTime lastFetched = 15;
    DateTime thisOrChildLastUpdated = 16;
    bool scheduleOnly = 17;
    bool activelyPublished = 18;
    string presentationChannel = 19;
    Priority priority = 20;
    repeated RelatedLink relatedLink = 21;
    repeated Rating ratings = 22;
    repeated Review reviews = 23;

    Identification identified = 100;
}

message ContentGroup {
    string type = 1;
    repeated Reference content = 2;

    Described described = 100;
}

message Person {
    string givenName = 1;
    string familyName = 2;
    string gender = 3;
    DateTime birthDate = 4;
    string birthPlace = 5;
    repeated string quote = 6;
    repeated Award awards = 7;
    ContentGroup contentGroup = 100;
}

message Organisation {
    repeated Person member = 1;
    repeated string alternativeTitles = 2;

    ContentGroup contentGroup = 100;
}

message Synopses {
    LocaleString shortDescription = 1;
    LocaleString mediumDescription = 2;
    LocaleString longDescription = 3;
}

message Priority {
    repeated string reason = 1 [deprecated = true];
    double priority = 2;
    repeated string positive_reasons = 3;
    repeated string negative_reasons = 4;
}

message Image {
    string uri = 1;
    int32 height = 2;
    int32 width = 3;
    string type = 4;
    string caption = 5 [deprecated = false];
    string copyright = 6 [deprecated = false];
    DateTime availability_start = 7;
    DateTime availability_end = 8;
    bool has_title_art = 9;
    string aspect_ratio = 10;
    string color = 11;
    string theme = 12;
    string mime_type = 13;
}

message RelatedLink {
    string type = 1;
    string url = 2;
    string sourceId = 3;
    string shortName = 4;
    string title = 5;
    string description = 6;
    string image = 7;
    string thumbnail = 8;
}

message Award {
    string outcome = 1;
    string title = 2;
    string description = 3;
    int32 year = 4;
}

message Rating {
    string type = 1;
    float value = 2;
    string source = 3;
}

message Review {
    LocaleString locale = 1;
    string review = 2;
    string author = 3;
    string authorInitials = 4;
    string rating = 5;
    DateTime date = 6;
    string reviewType = 7;
    string publisherKey = 8;
}
